--- a/product/product_view.html
+++ b/product/product_view.html
@@ -21,9 +21,12 @@
     <div class="wrap">
         <div class="header_wrap"> 
             <header class="mlr_32px">
-                <a href="#"><img src="../images/header_left_arrow.png" alt="header left arrow icon"></a>
-                <a href="index.html" class="t_center"><img src="../images/logo.png" alt="aurm logo"></a>
-                <a href="#" class="t_right"><img src="../images/menu_btn.png" alt="menu icon"></a>
+                <div class="h_left"><a href="../index.html"><img src="../images/header_left_arrow.png" alt="header left icon"></a></div>
+                <div class="h_middle"><a href="index.html" class="t_center"><img src="../images/logo.png" alt="aurm logo"></a></div>
+                <div class="h_right">
+                    <a href="#"><img src="../images/cart_icon.png" alt="cart icon image"></a>
+                    <a href="#" class="t_right" id="menu_btn"><img src="../images/menu_btn.png" alt="menu icon"></a>    
+                </div>
             </header>
         </div>
 
